--- a/themes/wilks/layouts/_default/page-single.html
+++ b/themes/wilks/layouts/_default/page-single.html
@@ -1,6 +1,12 @@
 {{ define "main" }}
   <article>
-    <h1>{{ .Title }}</h1>
+    <header class="banner">
+      <h1 class="banner__title">{{ .Title }}</h1>
+      {{ if .Params.intro }}
+        <p class="banner__intro">{{ .Params.intro }}</p>
+      {{ end }}
+    </header>
+  
     <div class="article-content">
       {{ .Content }}
     </div>
