--- a/themes/wilks/layouts/_default/single.html
+++ b/themes/wilks/layouts/_default/single.html
@@ -1,12 +1,17 @@
 {{ define "main" }}
-	<main>
-		<article>
-			<time class="date-time" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>
-			<h1>{{ .Title }}</h1>
-			<div class="article-content">
-				{{ .Content }}
-			</div>
-		</article>
-	</main>
+<article>
+	<header class="banner">
+		<h1 class="banner__title">{{ .Title }}</h1>
+		{{ if .Params.intro }}
+		<p class="banner__intro">{{ .Params.intro }}</p>
+		{{ end }}
+		<time class="date-time" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>
+	</header>
+
+	<div class="article-content">
+		{{ .Content }}
+	</div>
+</article>
 {{ partial "sidebar.html" . }}
 {{ end }}
+
