--- a/themes/wilks/layouts/partials/sidebar.html
+++ b/themes/wilks/layouts/partials/sidebar.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
 	<h1 class="icon icon--work">Things I've Launched</h1>
 	<ol class="simple-list">
 		<li class="simple-list__item">
@@ -23,4 +23,4 @@
 			<a href="https://clarachbay.com">https://clarachbay.com</a>
 		</li>
 	</ol>
-</section>
+</section> -->
