--- a/themes/wilks/layouts/index.html
+++ b/themes/wilks/layouts/index.html
@@ -1,13 +1,28 @@
 {{ define "main" }}
-  <p class="intro">My name is Tom Wilks</br> I develop modern & robust front-end
-      experiences at <a href="https://thisisbliss.com">Bliss</a> in Manchester.</p>
-  {{ partial "sidebar.html" . }}
-  <section>
-    <h1 class="icon icon--article">Articles</h1>
+
+{{ if .IsHome }}
+<div class="banner banner--front">
+  <h1 class="banner__title">I am a front end and Drupal developer from Manchester.</h1>
+  <p class="banner__intro">I've been Developing robust &amp; precise experiences for the web since 2005.</p>
+  <a class="button" href="/about">About me</a>
+</div>
+{{ end }}
+<section class="latest">
+  <div class="latest__col">
+    <h2 class="latest__heading">Latest Articles <a href="/articles">View all</a></h2>
     <ol class="post-list">
-      {{ range first 4 .Paginator.Pages }}
+      {{ range ( first 3 ( where .Site.RegularPages "Section" "articles" ) ) }}
       <li class="post-list__item">{{ .Render "summary" }}</li>
       {{ end }}
     </ol>
-  </section>
+  </div>
+  <div class="latest__col">
+    <h2 class="latest__heading">Latest Work <a href="/work">View all</a></h2>
+    <ol class="post-list">
+      {{ range ( first 3 ( where .Site.RegularPages "Section" "work" ) ) }}
+      <li class="post-list__item">{{ .Render "summary" }}</li>
+      {{ end }}
+    </ol>
+  </div>
+</section>
 {{ end }}
