--- a/themes/wilks/layouts/partials/header.html
+++ b/themes/wilks/layouts/partials/header.html
@@ -1,6 +1,6 @@
-<header class="site-header">
+<header class="site-header {{ if .IsHome }}site-header--home{{ end }}">
   <nav class="site-nav">
-    <a href="{{ .Site.BaseURL }}" class="logo">{{ .Site.Title }}</a>
+    <a href="{{ .Site.BaseURL }}" class="logo-alt">Tom </br>Wilks.</a>
     {{ with .Site.Menus.main}}
       {{ range sort . }}
         <a class="site-nav__link" href="{{ .URL | relURL }}">{{ .Name }}</a>
