--- a/themes/wilks/static/css/src/theme/_theme.scss
+++ b/themes/wilks/static/css/src/theme/_theme.scss
@@ -12,7 +12,7 @@
 
 // Create the themes.
 .theme-articles {
-  @include colour-scheme($color-primary-about, $color-secondary-about);
+  @include colour-scheme($color-primary-articles, $color-secondary-articles);
 }
 
 .theme-work {
