--- a/themes/wilks/static/css/src/base/_typography.scss
+++ b/themes/wilks/static/css/src/base/_typography.scss
@@ -21,8 +21,7 @@ em {
   font-size: 1.2rem;
 }
 
-.article-content {
-  max-width: 95rem;
+.typography {
 
   * + * {
     margin-top: 3rem;
@@ -47,12 +46,22 @@ em {
   ol,
   ul {
     list-style-position: inside;
-    margin-left: 2rem;
     font-size: $font-size-regular;
     line-height: 1.5;
 
+    ul,
+    ol {
+      margin-bottom: 1rem;
+      margin-left: 2rem;
+    }
+
     @media #{$breakpoint-small-x} {
       font-size: 1.5rem;
+    }
+
+    li {
+      margin-bottom: 0;
+      margin-top: 0;
     }
   }
 
