--- a/themes/wilks/static/css/src/layout/_site.scss
+++ b/themes/wilks/static/css/src/layout/_site.scss
@@ -2,7 +2,7 @@
   min-height: 100%;
   position: relative;
   background-color: lighten($color-primary-default, 15%);
-  margin-left: 35rem;
+  margin-left: 30rem;
   padding-top: 5rem;
   padding-left: 10rem;
   padding-right: 10rem;
@@ -30,15 +30,59 @@ section {
   }
 }
 
-
 code {
-  padding: 2rem;
-  display: block;
-  background: #0C090D;
-  font-size: 1.8rem;
-  line-height: 1.5;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  overflow: scroll;
-  border: 0.1rem solid rgba($color-light, 0.1);
+  display: inline-block;
+  padding: 0 0.5rem;
+  background-color: $color-primary-default;
+  border-radius: 0.5rem;
+  font-weight: $font-weight-bold;
+}
+
+.highlight {
+  pre {
+    border-radius: 0.5rem;
+  }
+
+  code {
+    padding: 2rem;
+    display: block;
+    background: #0C090D;
+    font-size: 1.8rem;
+    line-height: 1.3;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    overflow: scroll;
+    border: 0.1rem solid rgba($color-light, 0.1);
+    font-weight: 500;
+    border-radius: 0.5rem;
+  }
+}
+
+.content {
+
+}
+
+.content__main {
+  max-width: 90rem;
+}
+
+.content--with-sidebar {
+  display: flex;
+
+  .content__main {
+    max-width: 75rem;
+  }
+}
+
+.content__sidebar {
+  flex: 1;
+  background-color: rgba(#1c1c1c, 0.05);
+  padding: 5rem;
+  margin-left: 10rem;
+  margin-top: -5rem;
+  margin-right: -10rem;
+
+  * {
+    color: $color-dark;
+  }
 }
