--- a/themes/wilks/layouts/partials/sidebar.html
+++ b/themes/wilks/layouts/partials/sidebar.html
@@ -24,3 +24,22 @@
 		</li>
 	</ol>
 </section> -->
+
+<section class="latest">
+	<div class="latest__col">
+		<h2 class="latest__heading">Latest Articles <a href="/articles">View all</a></h2>
+		<ol class="post-list">
+			{{ range ( first 3 ( where .Site.RegularPages "Section" "articles" ) ) }}
+			<li class="post-list__item">{{ .Render "summary" }}</li>
+			{{ end }}
+		</ol>
+	</div>
+	<div class="latest__col">
+		<h2 class="latest__heading">Latest Work <a href="/work">View all</a></h2>
+		<ol class="post-list">
+			{{ range ( first 3 ( where .Site.RegularPages "Section" "work" ) ) }}
+			<li class="post-list__item">{{ .Render "summary" }}</li>
+			{{ end }}
+		</ol>
+	</div>
+</section>
